--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/kxw7duf.css" />
-
+<meta property="og:image" content="https://raw.githubusercontent.com/AleenAmm/Ramadan-card/main/public/template/card_none.png" />
+<meta property="og:title" content="بطاقات رواء الرمضانية" />
+<meta property="og:description" content="بطاقات رواء الرمضانية" /> 
+<meta property="og:url" content="https://www.rawaa.aleen.it.com/"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
