--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/kxw7duf.css" />
 <meta property="og:image" content="https://raw.githubusercontent.com/AleenAmm/Ramadan-card/main/public/template/card_none.png" />
 <meta property="og:title" content="بطاقات رواء الرمضانية" />
-<meta property="og:description" content="بطاقات رواء الرمضانية" /> 
+<meta property="og:description" content="حوّلي تهنئتك الرمضانية إلى بطاقة أنيقة بأسلوب رواء" /> 
 <meta property="og:url" content="https://www.rawaa.aleen.it.com/"/>
   </head>
   <body>
